# flixcal

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yaml
arch/: PKGBUILD  clean.sh
flixcal/: __init__.py
tests/: FLX-3056658025.ics  backend-response.json  test_flixcal.py
