[tool.poetry]
name = "flixcal"
version = "0.1.0"
description = ""
authors = ["kmille <github@androidloves.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
arrow = "^1.2.3"
ics = "^0.7.2"
pycookiecheat = "^0.4.7"


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
flixcal-generator = 'flixcal.cli.__init__:main'
