[tool.poetry]
name = "flixcal"
version = "0.1.1"
description = "simple to generate an ics file for your flixtrain rides using chromiums cookies"
authors = ["kmille <github@androidloves.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
arrow = "^1.2.3"
ics = "^0.7.2"
browser-cookie3 = "^0.17.0"
dbus-python = "^1.3.2"


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
pytest = "^7.2.1"
mypy = "^1.0.1"
types-requests = "^2.28.11.15"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
flixcal = 'flixcal.__init__:main'


[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "ics.*",
    "browser_cookie3"
]
ignore_missing_imports = true
